unpackaged/main/default/objects/Asset_Acquisition__c/Asset_Acquisition__c.object-meta.xml
<CustomObject>
    <label>Asset Acquisition</label>
    <nameField>
        <displayFormat>AA-{00000}</displayFormat>
        <label>Asset Acquisition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Acquisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>