unpackaged/main/default/objects/Asset_Acquisition__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset Acquisitions</relationshipLabel>
    <relationshipName>Asset_Acquisitions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>