unpackaged/main/default/objects/Asset_Acquisition__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <formula>Asset__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Type</label>
    <type>Text</type>
</CustomField>