unpackaged/main/default/objects/Asset_Acquisition__c/fields/Bid_Due__c.field-meta.xml
<CustomField>
    <fullName>Bid_Due__c</fullName>
    <label>Bid Due</label>
    <type>Date</type>
</CustomField>