unpackaged/main/default/objects/Asset_Acquisition__c/fields/Bid_Due_Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Bid_Due_Days_Remaining__c</fullName>
    <formula>IF(ISBLANK( Bid_Due__c ), null,  Bid_Due__c  - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Due Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>