unpackaged/main/default/objects/Asset_Acquisition__c/fields/Consignment_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please go to Related Tab and upload the document under Notes &amp; Attachments, once done tick this checkbox.</inlineHelpText>
    <label>Consignment Agreement</label>
    <type>Checkbox</type>
</CustomField>