unpackaged/main/default/objects/Asset_Acquisition__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>CASE(Contract_Term__c , 
&quot;12 Months&quot;, ADDMONTHS(Signed_Date__c,12),
&quot;15 Months&quot;, ADDMONTHS(Signed_Date__c,15),
&quot;18 Months&quot;, ADDMONTHS(Signed_Date__c,18),
&quot;24 Months&quot;, ADDMONTHS(Signed_Date__c,24),
&quot;30 Months&quot;, ADDMONTHS(Signed_Date__c,30),
&quot;36 Months&quot;, ADDMONTHS(Signed_Date__c,36),
null)</formula>
    <inlineHelpText>Auto generated on Save.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>