unpackaged/main/default/objects/Asset_Acquisition__c/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <label>Contract Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>15 Months</fullName>
            </value>
            <value>
                <fullName>18 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>30 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>