unpackaged/main/default/objects/Asset_Acquisition__c/fields/Contracting_Entity__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Entity__c</fullName>
    <label>Contracting Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EirTrade USA</fullName>
            </value>
            <value>
                <fullName>EirTrade IRL</fullName>
            </value>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>