unpackaged/main/default/objects/Asset_Acquisition__c/fields/EirTrade_Profit__c.field-meta.xml
<CustomField>
    <fullName>EirTrade_Profit__c</fullName>
    <label>EirTrade Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>