unpackaged/main/default/objects/Asset_Acquisition__c/fields/ESN_MSN__c.field-meta.xml
<CustomField>
    <fullName>ESN_MSN__c</fullName>
    <formula>Asset__r.ESN_MSN__c</formula>
    <label>ESN/MSN</label>
    <type>Text</type>
</CustomField>