unpackaged/main/default/objects/Asset_Acquisition__c/fields/Evaluated_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_Date__c</fullName>
    <label>Evaluated Date</label>
    <type>Date</type>
</CustomField>