unpackaged/main/default/objects/Asset_Acquisition__c/fields/Financier__c.field-meta.xml
<CustomField>
    <fullName>Financier__c</fullName>
    <label>Financier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blackrock</fullName>
            </value>
            <value>
                <fullName>EirTrade</fullName>
            </value>
            <value>
                <fullName>Faverey</fullName>
            </value>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>