unpackaged/main/default/objects/Asset_Acquisition__c/fields/Investment_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>Investment_Sign_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please go to Related Tab and upload the document under Notes &amp; Attachments, once done tick this checkbox.</inlineHelpText>
    <label>Investment Sign Off</label>
    <type>Checkbox</type>
</CustomField>