unpackaged/main/default/objects/Asset_Acquisition__c/fields/Last_Operator__c.field-meta.xml
<CustomField>
    <fullName>Last_Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Operator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Acquisitions</relationshipLabel>
    <relationshipName>Asset_Acquisitions</relationshipName>
    <type>Lookup</type>
</CustomField>