unpackaged/main/default/objects/Asset_Acquisition__c/fields/Owner_Category__c.field-meta.xml
<CustomField>
    <fullName>Owner_Category__c</fullName>
    <formula>TEXT(Asset__r.Owner_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Category</label>
    <type>Text</type>
</CustomField>