unpackaged/main/default/objects/Asset_Acquisition__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <formula>TEXT(Asset__r.Platform__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform</label>
    <type>Text</type>
</CustomField>