unpackaged/main/default/objects/Asset_Acquisition__c/fields/Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Profit_Margin__c</fullName>
    <formula>EirTrade_Profit__c /  Projected_Gross_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto generated on Save. Profit on Gross Sales.</inlineHelpText>
    <label>Profit Margin (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>