unpackaged/main/default/objects/Asset_Acquisition__c/fields/Project_Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Project_Days_Remaining__c</fullName>
    <formula>IF(ISBLANK(Signed_Date__c), null, Contract_End_Date__c - TODAY())</formula>
    <inlineHelpText>Auto generated on save.</inlineHelpText>
    <label>Project Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>