unpackaged/main/default/objects/Asset_Acquisition__c/fields/Projected_Gross_Sales__c.field-meta.xml
<CustomField>
    <fullName>Projected_Gross_Sales__c</fullName>
    <label>Projected Gross Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>