unpackaged/main/default/objects/Asset_Acquisition__c/fields/Reason_for_Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Closed_Lost__c</fullName>
    <label>Reason for Closed Lost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbid</fullName>
            </value>
            <value>
                <fullName>Withdrawn For Sale</fullName>
            </value>
            <value>
                <fullName>Lease Extended</fullName>
            </value>
            <value>
                <fullName>Incomplete Technical Records</fullName>
            </value>
            <value>
                <fullName>Consigned to another party</fullName>
            </value>
            <value>
                <fullName>Leased to another party</fullName>
            </value>
            <value>
                <fullName>No Bid</fullName>
            </value>
            <value>
                <fullName>Option 1</fullName>
                <isActive>false</isActive>
                <label>Option 1</label>
            </value>
            <value>
                <fullName>Option 2</fullName>
                <isActive>false</isActive>
                <label>Option 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>