unpackaged/main/default/objects/Asset_Acquisition__c/fields/Reason_for_No_Bid__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_No_Bid__c</fullName>
    <label>Reason for No Bid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset type</fullName>
            </value>
            <value>
                <fullName>Engine condition</fullName>
            </value>
            <value>
                <fullName>Last Operator</fullName>
            </value>
            <value>
                <fullName>Incomplete Technical Records</fullName>
            </value>
            <value>
                <fullName>Incident Related</fullName>
            </value>
            <value>
                <fullName>Price too high</fullName>
            </value>
            <value>
                <fullName>Option 1</fullName>
                <isActive>false</isActive>
                <label>Option 1</label>
            </value>
            <value>
                <fullName>Option 2</fullName>
                <isActive>false</isActive>
                <label>Option 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>