unpackaged/main/default/objects/Asset_Acquisition__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Asset_Acquisitions1</relationshipName>
    <type>Lookup</type>
</CustomField>