unpackaged/main/default/objects/Asset_Acquisition__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <formula>Asset__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller</label>
    <type>Text</type>
</CustomField>