unpackaged/main/default/objects/Asset_Acquisition__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active – not started</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active - in progress</label>
            </value>
            <value>
                <fullName>Active – bid submitted</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
                <label>Closed Lost – no bid sent</label>
            </value>
            <value>
                <fullName>Closed Lost – underbidder</fullName>
            </value>
            <value>
                <fullName>Closed Lost – no feedback</fullName>
            </value>
            <value>
                <fullName>No Bid</fullName>
                <isActive>false</isActive>
                <label>No Bid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>