unpackaged/main/default/objects/Asset_Acquisition__c/validationRules/Closed_Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Status__c) = &quot;Closed Lost&quot; &amp;&amp; TEXT(Reason_for_Closed_Lost__c) = &quot;&quot;</errorConditionFormula>
    <errorMessage>Please enter a Closed Lost reason before saving.</errorMessage>
</ValidationRule>