unpackaged/main/default/objects/Asset_Acquisition__c/validationRules/No_Bid_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Bid_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Status__c) = &quot;No Bid&quot; &amp;&amp; TEXT( Reason_for_No_Bid__c ) = &quot;&quot;</errorConditionFormula>
    <errorMessage>Please enter a No Bid reason before saving.</errorMessage>
</ValidationRule>