unpackaged/main/default/objects/Asset_Acquisition__c/validationRules/Prevent_Duplicate_ESN_MSN.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Duplicate_ESN_MSN</fullName>
    <active>true</active>
    <errorConditionFormula>Duplicate_Found__c = TRUE</errorConditionFormula>
    <errorMessage>Unable to Save! There is already an Asset Acquisition with this ESN/MSN Number.</errorMessage>
</ValidationRule>