unpackaged/main/default/objects/Asset_Acquisition__c/listViews/All_Active_Asset_Acquisitions.listView-meta.xml
<ListView>
    <fullName>All_Active_Asset_Acquisitions</fullName>
    <columns>NAME</columns>
    <columns>Asset_Name__c</columns>
    <columns>Asset__c</columns>
    <columns>Projected_Gross_Sales__c</columns>
    <columns>EirTrade_Profit__c</columns>
    <columns>Profit_Margin__c</columns>
    <columns>Acquisition_Price__c</columns>
    <columns>Contracting_Entity__c</columns>
    <columns>Contract_Term__c</columns>
    <columns>Financier__c</columns>
    <columns>Bid_Due__c</columns>
    <columns>Bid_Due_Days_Remaining__c</columns>
    <columns>Deal_Type__c</columns>
    <columns>Seller__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Asset Acquisitions</label>
</ListView>